--- a/css/styles.css
+++ b/css/styles.css
@@ -48,7 +48,6 @@ body {
 header {
   background: var(--header-bg);
   box-shadow: 0 2px 16px 0 var(--header-shadow);
-  border-radius: 0 0 18px 18px;
   margin-bottom: 1.5rem;
   position: sticky;
   top: 0;
@@ -173,14 +172,14 @@ header.scrolled {
 main {
   width: 100%;
   margin: 0 auto;
-  padding: 2rem 1rem;
+  /* padding: 2rem 1rem; */
   flex: 1;
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
   text-align: center;
-  max-width: 1200px;
+  max-width: 98%;
   margin-left: auto;
   margin-right: auto;
   padding-left: 2rem;
@@ -195,7 +194,7 @@ section,
   background: linear-gradient(90deg, #4f8cff11 30%, #a259ff11 100%);
   border-radius: 18px;
   box-shadow: 0 2px 16px 0 var(--header-shadow);
-  padding: 2rem 1.5rem;
+  /* padding: 2rem 1.5rem; */
   margin-bottom: 2rem;
   transition: background 0.3s;
 }
