change modal text color in light mode to white to make it more visible.

--- a/css/styles.css
+++ b/css/styles.css
@@ -1220,6 +1220,6 @@ header div a.active::after {
 }
 
 [data-theme="light"] .modal-message {
-    color: #18181b;
+    color: white;
     font-weight: 600;
 }
